2.18.1:

2007-06-10  Murray Cumming  <murrayc@murrayc.com>

	* libxml++/document.cc:
	* libxml++/nodes/element.cc: Avoid accessing freed memory 
	when the text nodes are merged by xmlAddChild().

2.18.0:

2007-02-10  Murray Cumming  <murrayc@murrayc.com>

	* examples/dom_parse_entities/main.cc:
	* examples/dom_parser/main.cc:
	* examples/dom_parser_raw/main.cc:
	* examples/dom_read_write/main.cc:
	* examples/dom_xpath/main.cc:
	* examples/dtdvalidation/main.cc:
	* examples/sax_parser/main.cc:
	* examples/sax_parser_build_dom/main.cc:
	* examples/sax_parser_entities/main.cc: Use std::string for file paths, 
	because we can not know the encoding of file paths. std::string therefore 
	means unknown encoding.

2007-02-06  Artur Wegele  <a.wegele@web.de>

	* libxml++/parsers/parser.h:
	* libxml++/validators/validator.h: Check for _MSC_VER instead 
	of WIN32 before setting MSVC++ pragmas, because that is apparently 
	more reliable. Bug #380110.

2.17.2:

2006-10-25  Nate Nielsen  <nielsen@memberwebs.com>

	* libxml++/nodes/node.cc:
	* libxml++/nodes/node.h: Node::get_next_sibling(), 
	Node::get_previous_sibling(). Bug #351867

2006-11-17  Nate Nielsen  <nielsen@memberwebs.com>

	* libxml++/parsers/textreader.cc
	* libxml++/parsers/textreader.h: Clean up TextReader() data 
	constructor signature. Removed '-1' as a special null terminated 
	value. This brings it inline with other parsers.

2.17.1:

2006-11-11  Nate Nielsen  <nielsen@memberwebs.com>

	* libxml++/nodes/element.cc: Element::set_attribute():
	Fix redeclaration of variable in if-block. Bug #361950

2006-11-11  Nate Nielsen  <nielsen@memberwebs.com>

	* libxml++/parsers/textreader.cc
	* libxml++/parsers/textreader.h: TextReader() can now parse 
	memory buffers as well as files. Bug #351215

2006-11-11  Nate Nielsen  <nielsen@memberwebs.com>

    * libxml++/nodes/node.cc:
    * libxml++/nodes/node.h: Add Node::get_parent() Bug #351876

2006-04-24  Cedric Gustin  <cedric.gustin@gmail.com>
