@@ -1,3 +1,7 @@
+2007-07-25  Christophe de Vienne  <cdevienne@gmail.com>
+
+	* libxml++/parsers/textreader.cc: fix bug #447535.
+
 2.18.1:
 
 2007-06-10  Murray Cumming  <murrayc@murrayc.com>
